Clean next_nested properly.

2019-08-15  Martin Liska  <mliska@suse.cz>

	PR ipa/91438
	* cgraph.c (cgraph_node::remove): When setting
	n->origin = NULL for all nested functions, reset
	also next_nested.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@274504 138bc75d-0d04-0410-961f-82ee72b054a4